[gd_scene load_steps=18 format=3 uid="uid://bit2ioismhmdq"]

[ext_resource type="Texture2D" uid="uid://dtlq4oyxso8rj" path="res://graphics/player/Prototype_Character(1).png" id="1_2nr0g"]
[ext_resource type="Script" path="res://scenes/Player/player.gd" id="1_2qjhr"]
[ext_resource type="Resource" uid="uid://b2qwep4g0igk7" path="res://scenes/inventory/PlayerInventory.tres" id="2_xpcjt"]
[ext_resource type="Script" path="res://scenes/Player/player_movement.gd" id="3_8j3ep"]
[ext_resource type="PackedScene" uid="uid://btyhlm2hgwhbb" path="res://scenes/Weapons/Sword/sword.tscn" id="4_ovb0r"]
[ext_resource type="Script" path="res://scenes/Player/state_machine.gd" id="5_paqjg"]
[ext_resource type="Script" path="res://scenes/Player/idle_state.gd" id="6_jmxui"]
[ext_resource type="Script" path="res://scenes/Player/run_state.gd" id="7_ptxom"]
[ext_resource type="Script" path="res://scenes/Player/dash_state.gd" id="8_52f5o"]
[ext_resource type="PackedScene" uid="uid://bufhrhyctx586" path="res://scenes/UI/ui.tscn" id="10_spc0q"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_phok1"]
radius = 4.0
height = 8.0

[sub_resource type="Animation" id="Animation_4fg3k"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerTexture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [16]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerTexture:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_q335x"]
resource_name = "dash"
length = 0.2
step = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerTexture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [40]
}

[sub_resource type="Animation" id="Animation_itkyq"]
resource_name = "idle"
length = 0.8
loop_mode = 1
step = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerTexture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.333333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_of0uf"]
resource_name = "run"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerTexture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [16, 17, 18, 19]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerTexture:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_a32w3"]
_data = {
"RESET": SubResource("Animation_4fg3k"),
"dash": SubResource("Animation_q335x"),
"idle": SubResource("Animation_itkyq"),
"run": SubResource("Animation_of0uf")
}

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_8p7m4"]
polygon = PackedVector2Array(-3, -6, -3, 6, 3, 6, 3, -6)

[node name="Player" type="CharacterBody2D" groups=["player"]]
script = ExtResource("1_2qjhr")
inventory = ExtResource("2_xpcjt")

[node name="PlayerMovement" type="Node2D" parent="."]
script = ExtResource("3_8j3ep")

[node name="PlayerTexture" type="Sprite2D" parent="."]
texture = ExtResource("1_2nr0g")
flip_h = true
hframes = 4
vframes = 12
frame = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 3)
shape = SubResource("CapsuleShape2D_phok1")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_a32w3")
}

[node name="StateMachine" type="Node2D" parent="."]
script = ExtResource("5_paqjg")

[node name="IdleState" type="Node2D" parent="StateMachine"]
script = ExtResource("6_jmxui")

[node name="RunState" type="Node2D" parent="StateMachine"]
script = ExtResource("7_ptxom")

[node name="DashState" type="Node2D" parent="StateMachine"]
script = ExtResource("8_52f5o")

[node name="Weapon" parent="." instance=ExtResource("4_ovb0r")]

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource("OccluderPolygon2D_8p7m4")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="UI" parent="." instance=ExtResource("10_spc0q")]
